--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This git repo is where we'll place all the HTML, CSS and JavaScript for our newbie coding club website.
+This git repo is where we'll place all the HTML, CSS and JavaScript for our newbie coding club website.  But first we need to learn how to use git/GitHub!
